--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saket's Language</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="CSS/main.css" />
     <script>
         // Redirect to homepage after a brief moment
         window.onload = function() {
