Fix path casing in HTML files to match directory names (CSS and Public)

--- a/Pages/homepage.html
+++ b/Pages/homepage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Saket's Language - Programming Doesn't Have to Be Serious to Be Powerful</title>
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsaketsla7364back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
@@ -489,6 +489,6 @@ agar (age >= 18) {
             }, 1500);
         });
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../Public/dhws-data-injector.js"></script>
 </body>
 </html>
