--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         // Redirect to homepage after a brief moment
         window.onload = function() {
             setTimeout(function() {
-                window.location.href = 'pages/homepage.html';
+                window.location.href = 'Pages/homepage.html';
             }, 100);
         };
     </script>
@@ -26,9 +26,9 @@
     <noscript>
         <div class="fallback-message">
             <p>JavaScript is disabled. Please click the link below to continue:</p>
-            <a href="pages/homepage.html">Go to Homepage</a>
+            <a href="Pages/homepage.html">Go to Homepage</a>
         </div>
     </noscript>
-<script id="dhws-dataInjector" src="/public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="/Public/dhws-data-injector.js"></script>
 </body>
 </html>
