--- a/Pages/documentation.html
+++ b/Pages/documentation.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Documentation - Saket's Language</title>
-    <link rel="stylesheet" href="../css/main.css" />
+    <link rel="stylesheet" href="../CSS/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <script type="module" src="https://static.rocket.new/rocket-web.js?_cfg=https%3A%2F%2Fsaketsla7364back.builtwithrocket.new&_be=https%3A%2F%2Fapplication.rocket.new&_v=0.1.8"></script>
@@ -909,6 +909,6 @@ bol "Passing Rate: " + passingRate.toFixed(1) + "%"</code></pre>
         `;
         document.head.appendChild(style);
     </script>
-<script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
+<script id="dhws-dataInjector" src="../Public/dhws-data-injector.js"></script>
 </body>
 </html>
