User changes commit

--- a/Pages/homepage.html
+++ b/Pages/homepage.html
@@ -466,7 +466,7 @@ agar (age >= 18) {
 
             <div class="border-t border-gray-800 mt-12 pt-8 text-center">
                 <p class="text-gray-400">
-                    © 2025 Saket's Language. All Rights Reserved. Made with ❤️ for the developer community.
+                    © 2025 All Rights Reserved. Made with ❤️ by Saket.
                 </p>
             </div>
         </div>
